--- a/jquery-mobile/jquery.mobile-1.0a3.min_nodisc.css
+++ b/jquery-mobile/jquery.mobile-1.0a3.min_nodisc.css
@@ -17,7 +17,7 @@
     border: 1px solid #2a2a2a;
     background: #111;
     color: #fff;
-    font-weight: bold;
+    font-weight: inherit;
     text-shadow: 0 -1px 1px #000;
     background-image: -moz-linear-gradient(top, #3c3c3c, #111);
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #3c3c3c), color-stop(1, #111));
