--- a/css/multiColumnTemplate.css
+++ b/css/multiColumnTemplate.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .container {
-	background-color: #FFFFFF;
+	background-color: #922022;
 	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
