--- a/css/multiColumnTemplate.css
+++ b/css/multiColumnTemplate.css
@@ -6,9 +6,10 @@
 	margin-right: auto;
 	border-bottom-width: 0px;
 	padding-left: 0px;
-	padding-top: 0px;
+	padding-top: 10px;
 	padding-right: 0px;
 	padding-bottom: 0px;
+	color: aqua;
 }
 .row {
 	width: 100%;
